--- a/FrontEnd/projects/sfm/src/index.html
+++ b/FrontEnd/projects/sfm/src/index.html
@@ -16,6 +16,7 @@
   <link href="../src/assets/css/nucleo-svg.css" rel="stylesheet" />
   <!-- CSS Files -->
   <link id="pagestyle" href="../src/assets/css/soft-ui-dashboard.css?v=1.0.1" rel="stylesheet" />
+  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 </head>
 <body>
   <app-root></app-root>
